Try to fix adding users to the area

--- a/client/views/app/organizations/area-settings/add-user-popup/search-master-list/search-master-list.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/search-master-list/search-master-list.html
@@ -1,10 +1,10 @@
 <template name="searchMasterList">
-  {{#if state$hasResults}}
+  {{#if searchUsers}}
     <div class="search-results">
       <b>Select to add</b>
       <hr/>
       <div class="search-users-container">
-        {{# each state$searchUsers}}
+        {{# each searchUsers}}
           {{> searchUserInfo}}
         {{/each}}
       </div>
