--- a/client/views/app/organizations/area-settings/add-user-popup/user-permissions/user-permissions.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/user-permissions/user-permissions.html
@@ -5,7 +5,7 @@
         Permission
       </div>
       <hr/>
-      {{> render component='userRolesSelect'}}
+      {{> userRolesSelect}}
       <br/>
 
       <div class="btn-group col-xs-12">
