--- a/client/views/app/organizations/area-settings/add-user-popup/add-user-popup.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/add-user-popup.html
@@ -4,25 +4,25 @@
       <b>Users</b>
     </div>
     <div class="panel-body">
-      {{#if state$inSearchMode}}
+      {{#if inSearchMode}}
         <form class="add-user-to-area-form">
           <input type="text" class="form-control input-field" placeholder="e.g. john@gmail.com" name="addUserName">
 
-          {{#if state$inviteNewUser}}
-            {{> render component='inviteNewUser'}}
+          {{#if inviteNewUser}}
+            {{> inviteNewUser}}
           {{/if}}
         </form>
 
-        {{#if state$isSearchEmpty}}
+        {{#if isSearchEmpty}}
           <p class="text-muted add-user-info">
             Search for a person in organization by name or email address, or enter an email address to invite someone
             new.
           </p>
         {{else}}
-          {{> render component='searchMasterList' searchText=state$searchText areaId=state$areaId}}
+          {{> searchMasterList searchText=state$searchText areaId=state$areaId}}
         {{/if}}
       {{else}}
-        {{> render component='userPermissions' selectedUser=state$selectedUser areaId=state$areaId selectPermissions=state$selectPermissions}}
+        {{> userPermissions selectedUser=state$selectedUser areaId=state$areaId selectPermissions=state$selectPermissions}}
       {{/if}}
     </div>
   </div>
