--- a/client/views/app/organizations/area-settings/add-user-popup/invite-new-user/invite-new-user.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/invite-new-user/invite-new-user.html
@@ -2,7 +2,7 @@
   <input type="text" class="form-control input-field" placeholder="Name" name="newUserName">
 
   <div class="input-field">
-    {{> render component='userRolesSelect'}}
+    {{> userRolesSelect}}
   </div>
   <button class="btn btn-primary col-xs-12" type="submit">
     <i class="fa fa-check"></i>
