--- a/client/views/app/organizations/area-settings/add-user-popup/search-master-list/search-user-info/search-user-info.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/search-master-list/search-user-info/search-user-info.html
@@ -1,9 +1,9 @@
 <template name="searchUserInfo">
   <div class="search-user-info-content">
-    <img src="{{getProfilePhoto}}" alt="Profile image" class="user-photo-min"/>
+    <img src="{{profilePicture _id}}" alt="Profile image" class="user-photo-min"/>
     <span class="search-user-info-name">
       <b>{{this.username}}</b>
-      ({{this.emails.[0].address}})
+      ({{emails.[0].address}})
     </span>
 
     <i class="fa fa-plus pull-right search-user-info-plus"></i>
