--- a/client/views/app/organizations/area-settings/area-settings.html
+++ b/client/views/app/organizations/area-settings/area-settings.html
@@ -3,26 +3,25 @@
     <button class="close-flyout-button">
       <i class="fa fa-angle-right"></i>
     </button>
-    {{state$area.name}} settings
+    {{area.name}} settings
   </div>
 
   <div class="flyout-content">
 
     <div class="name-editable-wrapper">
-      <h1 class="area-name" style="display: inline-block;" data-id="{{state$area._id}}"
-          data-display="false">{{state$area.name}}</h1>
+      <h1 class="area-name" style="display: inline-block;">{{area.name}}</h1>
     </div>
 
     <div class="form-group">
       <label class="col-sm-2 control-label">Area Color</label>
 
       <div class="col-sm-10">
-        {{> colorPicker onColorChange=state$onColorChange checkedColor=state$areaColor}}
+        {{> colorPicker onColorChange=onColorChange checkedColor=areaColor}}
       </div>
     </div>
 
     <div class="area-users">
-      {{#each state$areaUsers}}
+      {{#each areaUsers}}
         <div class="user-profile-image-container">
           {{#if isManager}}
             {{#unless isMe _id}}
@@ -38,14 +37,14 @@
     </div>
 
     {{#if isManager}}
-      <button class="btn btn-white col-xs-12 add-user" data-id="{{state$area._id}}">
+      <button class="btn btn-white col-xs-12 add-user">
         <i class="fa fa-user-plus"></i> Add User
       </button>
       <br/>
       {{#if state$addUser}}
-        {{> render component='addUserPopup' areaId=state$area._id}}
+        {{> addUserPopup areaId=area._id}}
       {{/if}}
-      <button class="btn btn-danger col-xs-12 delete-area" data-id="{{state$area._id}}">Delete Area</button>
+      <button class="btn btn-danger col-xs-12 delete-area">Delete Area</button>
     {{/if}}
   </div>
 </template>
