--- a/client/views/app/organizations/area-settings/add-user-popup/search-master-list/search-user-info/search-user-info.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/search-master-list/search-user-info/search-user-info.html
@@ -1,8 +1,8 @@
 <template name="searchUserInfo">
   <div class="search-user-info-content">
-    <img src="{{profilePicture _id}}" alt="Profile image" class="user-photo-min"/>
+    <img src="{{profilePicture this}}" alt="Profile image" class="user-photo-min"/>
     <span class="search-user-info-name">
-      <b>{{this.username}}</b>
+      <b>{{username this}}</b>
       ({{emails.[0].address}})
     </span>
 
