--- a/client/views/app/stocktake/counting-view/counting-view.html
+++ b/client/views/app/stocktake/counting-view/counting-view.html
@@ -3,6 +3,6 @@
   {{> pageHeading title='Stocktake Counting' category="Stocktake List"}}
 
   <div class="wrapper wrapper-content">
-    {{> render component='stockCounting'}}
+    {{> stockCounting}}
   </div>
 </template>
