--- a/client/views/app/stocktake/counting-view/counting-view-items/areas/new-area-modal/new-area-modal.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/areas/new-area-modal/new-area-modal.html
@@ -4,7 +4,7 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
             class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Add new {{state$name}} area</h4>
+        <h4 class="modal-title" id="myModalLabel">Add new {{name}} area</h4>
       </div>
       <div class="modal-body">
         <div>
@@ -13,15 +13,15 @@
               <label class="col-sm-2 control-label">Name</label>
 
               <div class="col-sm-8">
-                <input type="text" class="form-control" name="areaName" placeholder="Add name for {{state$name}} area"
-                       id="{{state$name}}areaName">
+                <input type="text" class="form-control" name="areaName" placeholder="Add name for {{name}} area"
+                       id="{{name}}areaName">
               </div>
             </div>
           </form>
           <br>
 
           <div class="pull-right">
-            <button class="btn btn-small btn-primary" id="save{{state$name}}Area">Save</button>
+            <button class="btn btn-small btn-primary" id="save{{name}}Area">Save</button>
             <button class="btn btn-small btn-default" data-dismiss="modal">Cancel</button>
           </div>
           <br><br>
