--- a/client/views/app/stocktake/counting-view/counting-view-items/list-item/list-item.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list-item/list-item.html
@@ -1,22 +1,22 @@
 <template name="stockCountingListItem">
-  {{#if state$item}}
-    <li class="list-group-item" data-id="{{state$item._id}}" data-stockRef="{{state$item.stockRef}}"
-        data-place="{{state$item.place}}">
-      {{#if state$editable}}
+  {{#if item}}
+    <li class="list-group-item" data-id="{{item._id}}" data-stockRef="{{item.stockRef}}"
+        data-place="{{item.place}}">
+      {{#if editable}}
         <i class="fa fa-fw fa-reorder"></i>
       {{/if}}
-      {{state$item.description}}
-      <small>({{supplierName state$item.suppliers}})</small>
-      {{#if state$editable}}
+      {{item.description}}
+      <small>({{supplierName item.suppliers}})</small>
+      {{#if editable}}
         <i class="fa fa-trash pull-right removeFromList"></i>
       {{/if}}
       <span class="pull-right">
-        {{#if state$countEditable state$item.stockRef}}
-          <a href="" class="counting">{{state$item.counting}}</a> &nbsp; [{{state$item.portionOrdered}}]
+        {{#if countEditable item.stockRef}}
+          <a href="" class="counting">{{item.counting}}</a> &nbsp; [{{item.portionOrdered}}]
         {{else}}
           <p data-toggle="tooltip" data-placement="top"
-             title="You have already placed an order for this stockItem. Can't edit now. Create a new stocktake to place another order.">{{state$item.counting}}
-            &nbsp; [{{state$item.portionOrdered}}]</p>
+             title="You have already placed an order for this stockItem. Can't edit now. Create a new stocktake to place another order.">{{item.counting}}
+            &nbsp; [{{item.portionOrdered}}]</p>
         {{/if}}
       </span>
     </li>
