--- a/client/views/app/stocktake/counting-view/counting-view-items/list/list.html
+++ b/client/views/app/stocktake/counting-view/counting-view-items/list/list.html
@@ -1,45 +1,45 @@
 <template name="stockCounting">
   <div class="row">
     <div class="col-lg-12">
-      {{#if state$notTemplate}}
-        <a class="btn btn-primary btn-sm pull-right" href="/stocktake/orders/{{state$version}}">View Orders<br></a>
+      {{#if notTemplate}}
+        <a class="btn btn-primary btn-sm pull-right" href="/stocktake/orders/{{version}}">View Orders<br></a>
       {{else}}
         <a class="btn btn-primary btn-sm pull-right generateOrders">Save stocktake &amp; generate orders<br></a>
-        {{#if state$editable}}
+        {{#if editable}}
           <a class="btn btn-link btn-sm pull-right saveStockTake"><i class="fa fa-fw fa-save"></i>Save</a>
         {{else}}
           <a class="btn btn-link btn-sm pull-right editStockTake"><i class="fa fa-fw fa-edit"></i>Edit Stocktake
             Template</a>
         {{/if}}
       {{/if}}
-      {{dateFormat state$stocktakeMain.stocktakeDate}}
+      {{dateFormat stocktakeMain.stocktakeDate}}
       <hr>
     </div>
   </div>
   
   <div class="row">
-    {{> render component="areaFilters"}}
-    {{#if state$filtered}}
+    {{> areaFilters}}
+    {{#if filtered}}
       <div class="col-md-8">
-        {{#if state$notTemplate}}
+        {{#if notTemplate}}
           <ul class="list-group sortableStockItems">
-            {{#each state$stocktakeList}}
-              {{> render component="stockCountingListItem" id=this.stockId version=state$version garea=state$generalArea sarea=state$specialArea stocktakeId=this._id}}
+            {{#each stocktakeList}}
+              {{> stockCountingListItem id=this.stockId version=version garea=generalArea sarea=specialArea stocktakeId=this._id}}
             {{else}}
               No items on this list
             {{/each}}
           </ul>
         {{else}}
           <ul class="list-group sortableStockItems">
-            {{#each state$ingredientsList}}
-              {{> render component="stockCountingListItem" id=this._id version=state$version garea=state$generalArea sarea=state$specialArea}}
+            {{#each ingredientsList}}
+              {{> stockCountingListItem id=this._id version=version garea=generalArea sarea=specialArea}}
             {{else}}
               No items on this list
             {{/each}}
           </ul>
         {{/if}}
         
-        {{#if state$editable}}
+        {{#if editable}}
           <a class="btn btn-block btn-default btn-outline addStock">Add stock items to this area<br></a>
         {{/if}}
       </div>
@@ -58,14 +58,14 @@
   <!-- ADD GENERAL AREA MODAL LIST-->
   <div class="modal fade" id="addNewGeneralAreaModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
        aria-hidden="true">
-    {{> render component = 'newAreaModal' name="general"}}
+    {{> newAreaModal name="general"}}
   </div>
   <!-- /ADD GENERAL AREA MODAL LIST-->
 
   <!-- ADD SPECIAL AREA MODAL LIST-->
   <div class="modal fade" id="addNewSpecialAreaModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
        aria-hidden="true">
-    {{> render component = 'newAreaModal' name="special"}}
+    {{> newAreaModal name="special"}}
   </div>
   <!-- /ADD SPECIAL AREA MODAL LIST-->
 </template>
