--- a/client/views/app/notifications/text/notification-text.html
+++ b/client/views/app/notifications/text/notification-text.html
@@ -1,7 +1,7 @@
 <template name="notifiText">
   <div class="feed-element" data-shift="{{state$notifi._id}}" style="border-bottom: none; padding-bottom: 0;">
     <a href="#" class="pull-left">
-      <img alt="image" class="img-circle" src="{{state$createdByImage}}">
+      <img alt="image" class="img-circle" src="{{profilePicture state$notifi.createdBy}}">
     </a>
 
     <div class="media-body ">
@@ -17,7 +17,7 @@
 
       {{#unless state$notifi.interactive}}
         <div class="mark-as-read text-warning">
-          <button class="btn btn-xs btn-warning readNotification" data-id="{{state$notifi._id}}">Mark as read</button>
+          <button class="btn btn-xs btn-warning readNotification">Mark as read</button>
         </div>
       {{/unless}}
     </div>
