--- a/client/views/app/user-unavailabilities/user-unavailable.less
+++ b/client/views/app/user-unavailabilities/user-unavailable.less
@@ -7,13 +7,12 @@
   .user-unavailability-general;
 
   .user-info-wrapper {
-    //margin-left: 20px;
+    .users-image {
+      display: inline-block;
 
-    .profile-content {
-    }
-    .profile-image {
-      width: 140px;
-      height: 100px;
+      img {
+        width: 96px;
+      }
     }
   }
 
