--- a/client/views/app/user-unavailabilities/view.html
+++ b/client/views/app/user-unavailabilities/view.html
@@ -3,19 +3,20 @@
   <div class="flyout-content">
     <div class="panel-body user-unavailability">
       <!-- User info -->
-      <div class="user-info-wrapper col-xs-8 col-xs-offset-4">
-        <div class="profile-image">
-          <img alt="image" class="img-responsive" src="{{state$profileImgSrc}}">
-        </div>
-        <div class="ibox-content profile-content">
-          <h4>
-            <strong>
-              {{username state$userName}}
-            </strong>
-          </h4>
+      <div class="row">
+        <div class="user-info-wrapper col-xs-12 text-center">
+          <div class="users-image">
+            <img alt="image" class="img-responsive" src="{{profilePicture currentUser}}">
+          </div>
+          <div class="col-xs-12">
+            <h4>
+              <strong>
+                {{username currentUser}}
+              </strong>
+            </h4>
+          </div>
         </div>
       </div>
-
       <!-- Components with unavailables and leave requests -->
       {{> render component="unavailabilitiesOrLeaveRequestsComponent" type="unavailabilities"}}
       {{> render component="unavailabilitiesOrLeaveRequestsComponent" type="leaveRequests"}}
