--- a/client/views/app/user-unavailabilities/view.html
+++ b/client/views/app/user-unavailabilities/view.html
@@ -18,8 +18,8 @@
         </div>
       </div>
       <!-- Components with unavailables and leave requests -->
-      {{> render component="unavailabilitiesOrLeaveRequestsComponent" type="unavailabilities"}}
-      {{> render component="unavailabilitiesOrLeaveRequestsComponent" type="leaveRequests"}}
+      {{> unavailabilitiesOrLeaveRequests type="unavailabilities"}}
+      {{> unavailabilitiesOrLeaveRequests type="leaveRequests"}}
     </div>
   </div>
 </template>
