Get rid of shift date in whole project code

--- a/client/lib/components/dashboard/shifts/shift/view.html
+++ b/client/lib/components/dashboard/shifts/shift/view.html
@@ -3,7 +3,7 @@
     <td class="text-left">
       {{timeFormat state$shift.startTime}} - {{timeFormat state$shift.endTime}}
     </td>
-    <td>{{dayFormat state$shift.shiftDate}}</td>
+    <td>{{dayFormat state$shift.startTime}}</td>
     <td class="text-center">{{state$section}}</td>
     {{#if state$open}}
       <td class="text-center">
