--- a/client/views/app/users/profile/profile-items/shifts/shift-item/shift-item.html
+++ b/client/views/app/users/profile/profile-items/shifts/shift-item/shift-item.html
@@ -2,7 +2,7 @@
   {{#if item}}
     <p>
       <a href="/roster/shift/{{item._id}}">
-        {{dayFormat item.shiftDate}}
+        {{dayFormat item.startTime}}
         {{timeFormat item.startTime}} -
         {{timeFormat item.endTime}}
         {{#if item.section}}
