--- a/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
+++ b/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
@@ -186,7 +186,7 @@
                 <!-- Ingredients used -->
                 <div class="form-group">
                   <label class="col-sm-2 control-label">Ingredients used</label>
-                  {{> listOfIngredients}}
+                  {{> listOfIngredients ingredients=ingredients onChange=editIngredientsListOnChange}}
                 </div>
 
                 <!-- Portions -->
