--- a/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/new-unavailability/new-unavailability.html
+++ b/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/new-unavailability/new-unavailability.html
@@ -74,15 +74,11 @@
         </div>
 
         <!-- Submit/cancel -->
-        <div class="form-group col-xs-12">
-          <div class="row">
-            <div class="col-xs-4 col-xs-offset-8">
-              <button type="submit" class="btn btn-primary">Add</button>
-              <button type="button" class="cancel-button btn btn-white close-flyout-button">
-                Cancel
-              </button>
-            </div>
-          </div>
+        <div class="form-group col-xs-12 text-right">
+          <button type="submit" class="btn btn-primary">Add</button>
+          <button type="button" class="cancel-button btn btn-white close-flyout-button">
+            Cancel
+          </button>
         </div>
       </form>
     </div>
