fixed stocktake ordering

--- a/client/lib/components/email/view.html
+++ b/client/lib/components/email/view.html
@@ -1,4 +1,6 @@
 <template name="composeMail">
+  <div class="modal fade" id="composeMailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+       aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content" style="width: 130%">
       <div class="modal-header">
@@ -53,5 +55,6 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 </template>
