--- a/client/views/app/stocktake/ordering/ordering_view.html
+++ b/client/views/app/stocktake/ordering/ordering_view.html
@@ -4,7 +4,7 @@
 
   <div class="wrapper wrapper-content">
     <div class="row">
-      {{> render component='ordersList'}}
+      {{> ordersList orderId=this.orderId}}
     </div>
   </div>
 </template>
