--- a/client/views/app/stocktake/ordering/list/orders-list.html
+++ b/client/views/app/stocktake/ordering/list/orders-list.html
@@ -2,8 +2,8 @@
   <div class="col-lg-12">
     <div class="ibox ">
       <div class="ibox-content">
-        {{#if state$isNull}}
-          {{> render component="supplierFilter" onSupplierChanged=state$onSupplierChanged}}
+        {{#if isNull}}
+          {{> supplierFilter onSupplierChanged=onSupplierChanged orderId=this.orderId}}
           <table class="table table-condensed table-hover table-striped">
             <thead>
             <tr>
@@ -11,22 +11,22 @@
               <th>On hand</th>
               <th>Needed</th>
               <th>To order</th>
-              {{#if state$supplier}}
+              {{#if supplier}}
               {{else}}
                 <th>Action</th>
               {{/if}}
             </tr>
             </thead>
             <tbody>
-            {{#each state$list}}
-              {{> render component="ordersListItem" itemId=this onCountChange=state$onCountChange}}
+            {{#each list}}
+              {{> ordersListItem itemId=this onCountChange=onCountChange}}
             {{/each}}
             </tbody>
           </table>
 
           <hr>
-          {{#if state$orderNote}}
-            <div><p class="text-danger pull-left">Note: &nbsp;</p>{{state$orderNote}}</div>
+          {{#if orderNote}}
+            <div><p class="text-danger pull-left">Note: &nbsp;</p>{{orderNote}}</div>
           {{else}}
             <textarea name="supplierOrderNote" id="supplierOrderNote" class="form-control message-input-post"
                       placeholder="Add notes here and press enter to submit"></textarea>
@@ -40,12 +40,11 @@
     </div>
   </div>
 
-  {{> render component='commentsPanel' id=state$version type='stockOrders'}}
+  {{> render component='commentsPanel' id=this.orderId type='stockOrders'}}
 
   <!-- COMPOSE MAIL MODAL-->
-  <div class="modal fade" id="composeMailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-       aria-hidden="true">
+
     {{> render component = 'composeMail' name="composeMail" initialHtml=state$initialHtml supplier=state$activeSupplier}}
-  </div>
+
   <!-- /COMPOSE MAIL MODAL -->
 </template>
