Finished porting unavialibility

--- a/client/views/app/user-unavailabilities/flyout-header/flyout-header.html
+++ b/client/views/app/user-unavailabilities/flyout-header/flyout-header.html
@@ -3,6 +3,6 @@
     <button class="close-flyout-button">
       <i class="fa fa-angle-right"></i>
     </button>
-    <span>{{state$title}}</span>
+    <span>{{title}}</span>
   </div>
 </template>
