--- a/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/new-unavailability/new-unavailability.html
+++ b/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/new-unavailability/new-unavailability.html
@@ -1,5 +1,5 @@
 <template name="addNewUnavailability">
-  {{> render component="unavailabilitiesFlyoutHeader" title="Unavailability"}}
+  {{> unavailabilitiesFlyoutHeader title="Unavailability"}}
   <div class="flyout-content">
     <div class="panel-body new-unavailability">
       <form class="form-horizontal unavailability-form">
