--- a/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/unavailability-item/unavailability-item.html
+++ b/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/unavailability-item/unavailability-item.html
@@ -21,7 +21,7 @@
             {{#if comment}}
               <span class="text">{{comment}}</span>
             {{else}}
-              <span class="text-muted">There are no comment</span>
+              <span class="text-muted">There is no comment</span>
             {{/if}}
           </div>
 
