--- a/client/views/app/user-unavailabilities/user-unavailabilities.html
+++ b/client/views/app/user-unavailabilities/user-unavailabilities.html
@@ -1,5 +1,5 @@
 <template name="userUnavailability">
-  {{> render component="unavailabilitiesFlyoutHeader" title="Unavailabilities and leave requests"}}
+  {{> unavailabilitiesFlyoutHeader title="Unavailabilities and leave requests"}}
   <div class="flyout-content">
     <div class="panel-body user-unavailability">
       <!-- User info -->
