--- a/client/views/app/user-unavailabilities/leave-requests/leave-requests.html
+++ b/client/views/app/user-unavailabilities/leave-requests/leave-requests.html
@@ -1,5 +1,5 @@
 <template name="leaveRequestMainView">
   <div class="wrapper wrapper-content animated">
-    {{> render component="viewLeaveRequest" mode="review" leaveRequestId=leaveRequestId}}
+    {{> viewLeaveRequest mode="review" leaveRequestId=leaveRequestId}}
   </div>
 </template>
