--- a/client/views/app/user-unavailabilities/leave-requests/view-leave-request/view-leave-request.html
+++ b/client/views/app/user-unavailabilities/leave-requests/view-leave-request/view-leave-request.html
@@ -1,7 +1,7 @@
 <template name="viewLeaveRequest">
   <!-- Flayout header -->
-  {{#unless state$isReviewMode}}
-    {{> render component="unavailabilitiesFlyoutHeader" title="Leave Request"}}
+  {{#unless isReviewMode leaveRequest}}
+    {{> unavailabilitiesFlyoutHeader title="Leave Request"}}
   {{/unless}}
   <div class="flyout-content">
     <div class="panel-body view-leave-request">
@@ -16,9 +16,9 @@
           </div>
           <div class="row">
             <div class="col-xs-9">
-              {{#if state$isReviewMode}}
+              {{#if isReviewMode leaveRequest}}
                 <input class="comment-input form-control" type="text" readonly
-                       value="{{state$formatDate state$leaveRequest.startDate}}">
+                       value="{{formatDate leaveRequest.startDate}}">
               {{else}}
                 <div class="start-date-picker input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
@@ -38,9 +38,9 @@
           </div>
           <div class="row">
             <div class="col-xs-9">
-              {{#if state$isReviewMode}}
+              {{#if isReviewMode leaveRequest}}
                 <input class="comment-input form-control" type="text" readonly
-                       value="{{state$formatDate state$leaveRequest.endDate}}">
+                       value="{{formatDate leaveRequest.endDate}}">
               {{else}}
                 <div class="end-date-picker input-group">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
@@ -60,8 +60,8 @@
           </div>
           <div class="row">
             <div class="col-xs-12">
-              {{#if state$isReviewMode}}
-                <input class="comment-input form-control" type="text" readonly value="{{state$leaveRequest.comment}}">
+              {{#if isReviewMode leaveRequest}}
+                <input class="comment-input form-control" type="text" readonly value="{{leaveRequest.comment}}">
               {{else}}
                 <input class="comment-input form-control" type="text">
               {{/if}}
@@ -70,15 +70,15 @@
         </div>
 
         <!-- Approve/Decline -->
-        {{#if state$isReviewMode}}
-          {{#if state$canBeApprovedOrDeclined}}
-            <div class="form-group col-xs-12">
-              <div class="col-xs-6 approve-decline-btn-wrapper">
-                <button class="approve-button btn btn-primary" type="button">Approve</button>
-                <button class="decline-button btn btn-danger" type="button">Decline</button>
+        {{#if isReviewMode leaveRequest}}
+            {{#if canBeApprovedOrDeclined isReviewMode leaveRequest}}
+              <div class="form-group col-xs-12">
+                <div class="col-xs-6 approve-decline-btn-wrapper">
+                  <button class="approve-button btn btn-primary" type="button">Approve</button>
+                  <button class="decline-button btn btn-danger" type="button">Decline</button>
+                </div>
               </div>
-            </div>
-          {{/if}}
+            {{/if}}
         {{else}}
           <!-- Notify manager -->
           <div class="form-group col-xs-12">
@@ -90,7 +90,7 @@
             <div class="row">
               <div class="col-xs-12">
                 <select class="notify-manager-select form-control">
-                  {{#each state$managers}}
+                  {{#each managers}}
                     <option value={{this._id}}>{{username this._id}}</option>
                   {{/each}}
                 </select>
@@ -99,17 +99,9 @@
           </div>
 
           <!-- Submit/cancel -->
-          <div class="form-group col-xs-12">
-            <div class="row">
-              <div class="col-xs-4 col-xs-offset-8">
-                <button type="submit" class="btn btn-primary">
-                  Add
-                </button>
-                <button type="button" class="cancel-button btn btn-white close-flyout-button">
-                  Cancel
-                </button>
-              </div>
-            </div>
+          <div class="form-group col-xs-12 float-left">
+            <button type="submit" class="btn btn-primary">Add</button>
+            <button type="button" class="cancel-button btn btn-white close-flyout-button">Cancel</button>
           </div>
         {{/if}}
       </form>
