--- a/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/unavailabilities-or-leave-requests.html
+++ b/client/views/app/user-unavailabilities/unavailabilities-or-leave-requests/unavailabilities-or-leave-requests.html
@@ -9,7 +9,7 @@
 
       <!-- Add new item button -->
       <div class="col-xs-6 text-right">
-        <button class="new-item-button btn btn-primary btn-xs">Add new</button>
+        <button class="btn btn-primary btn-xs new-item-button">Add new</button>
       </div>
     </div>
 
