--- a/client/views/app/dashboard/dashboard.html
+++ b/client/views/app/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<template name="home">
+<template name="dashboard">
   <div class="wrapper wrapper-content">
     {{#if isInOrganization}}
       {{#if getCurrentArea}}
