--- a/client/views/app/navigations/heading/breadcrumbs/breadcrumbs.html
+++ b/client/views/app/navigations/heading/breadcrumbs/breadcrumbs.html
@@ -18,7 +18,7 @@
     </h2>
     <ol class="breadcrumb">
       <li>
-        <a href="{{pathFor route='home'}}">Home</a>
+        <a href="{{pathFor route='dashboard'}}">Home</a>
       </li>
       {{#if heading.category}}
         <li>
