--- a/client/views/common/not-found/not-found.html
+++ b/client/views/common/not-found/not-found.html
@@ -11,7 +11,7 @@
           You can go back to main page (Dashboard)
         </p>
 
-        <a href="{{pathFor route='home'}}" class="btn btn-sm btn-primary">Go to Dashboard</a>
+        <a href="{{pathFor route='dashboard'}}" class="btn btn-sm btn-primary">Go to Dashboard</a>
 
       </div>
     </div>
