Ported and refactored newsfeed and shifts

--- a/client/views/app/dashboard/dashboard.html
+++ b/client/views/app/dashboard/dashboard.html
@@ -4,13 +4,13 @@
       {{#if getCurrentArea}}
         <div class="row">
           <div class="col-md-7 col-xs-12 pull-left">
-            {{> render component="clock"}}
+            {{> clock}}
           </div>
           <div class="col-md-5 col-xs-12 pull-right">
-            {{> render component="shiftsSummary"}}
+            {{> shiftsSummary}}
           </div>
           <div class="col-md-7 col-xs-12 pull-left margin-top-20">
-            {{> render component="newsFeed" user=currentUser}}
+            {{> newsFeed}}
           </div>
         </div>
         <div class="row">
