--- a/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
+++ b/client/views/app/job-items/job-item-edit-submit/job-items-submit-edit.html
@@ -14,14 +14,14 @@
             <h5>Create a new job</h5>
           </div>
           <div class="ibox-content">
-            <form method="get" class="form-horizontal">
+            <form class="form-horizontal job-item-submit-edit-form">
 
               <!-- Name -->
               <div class="form-group">
                 <label class="col-sm-2 control-label">Name</label>
 
                 <div class="col-sm-10">
-                  <input type="text" name="name" class="form-control" placeholder="Enter Name for the job">
+                  <input type="text" class="form-control name-input" placeholder="Enter Name for the job">
                 </div>
               </div>
 
@@ -30,7 +30,7 @@
                 <label class="col-sm-2 control-label">Type</label>
 
                 <div class="col-sm-10">
-                  <select name="type" class="form-control changeType">
+                  <select class="form-control type-select">
                     {{#each jobTypes}}
                       <option value="{{_id}}">{{name}}</option>
                     {{/each}}
@@ -44,7 +44,7 @@
                   <label class="col-sm-2 control-label">Sections</label>
 
                   <div class="col-sm-10">
-                    <select name="sections" class="form-control">
+                    <select class="form-control sections-select">
                       <option value="" selected="selected">Select Section</option>
                       {{#each sections}}
                         <option value="{{_id}}">{{name}}</option>
@@ -60,15 +60,13 @@
                   <label class="col-sm-2 control-label">Recipe</label>
 
                   <div class="col-sm-10">
-                    {{> render component = 'textEditor' id='jobItemEditorSubmit'
-                    initialHtml="Add recipe to job"}}
+                    {{> textEditor initialHtml="Add recipe to job"}}
                   </div>
                 {{else}}
                   <label class="col-sm-2 control-label">Description</label>
 
                   <div class="col-sm-10">
-                    {{> render component = 'textEditor' id='jobItemEditorSubmit'
-                    initialHtml="Add description to job"}}
+                    {{> textEditor initialHtml="Add description to job"}}
                   </div>
                 {{/if}}
               </div>
@@ -81,7 +79,7 @@
                   <label class="col-sm-2 control-label">Checklist</label>
 
                   <div class="col-sm-10">
-                    <input type="text" name="checklist" class="form-control addItemToChecklist"
+                    <input type="text" class="form-control add-item-to-checklist"
                            placeholder="Add an item to checklist and press enter">
                     <br/>
                     <ol class="checklist list-group"></ol>
@@ -94,7 +92,7 @@
                   <label class="col-sm-2 control-label">Frequency</label>
 
                   <div class="col-sm-10">
-                    <select name="frequency" class="form-control changeFrequency">
+                    <select class="form-control frequency-select">
                       {{#each frequencies}}
                         <option value="{{value}}">{{title}}</option>
                       {{/each}}
@@ -110,7 +108,7 @@
                       <label class="col-sm-2 control-label"></label>
 
                       <div class="col-sm-10">
-                        <p>Repeat every <input type="number" name="step" class="" value="2" min="2"> weeks.</p>
+                        <p>Repeat every <input type="number" class="step-input" value="2" min="2"> weeks.</p>
                       </div>
                     </div>
                   {{/if}}
@@ -122,7 +120,7 @@
                     <div class="col-sm-10">
                       {{#each week}}
                         <div class="checkbox">
-                          <input type="checkbox" id="{{this}}" name="daysSelected" value="{{this}}">
+                          <input type="checkbox" id="{{this}}" class="days-selected" value="{{this}}">
                           <label for="{{this}}">
                             {{this}}
                           </label>
@@ -149,7 +147,7 @@
 
                   <div class="col-sm-10">
                     <div class="input-group">
-                      <input type="text" name="startsOn" class="form-control dateSelect" value="{{startsOn}}">
+                      <input type="text" class="form-control date-select" value="{{startsOn}}">
                       <span class="input-group-addon">
                         <i class="fa fa-calendar"></i>
                       </span>
@@ -162,24 +160,28 @@
                   <label class="col-sm-2 control-label">Ends</label>
 
                   <div class="col-sm-10">
+
                     <div class="radio">
-                      <input type="radio" id="radio" name="radioOption" data-doc="endsNever" checked>
+                      <input type="radio" id="radio" name="ends-radio-button" value="never" checked>
                       <label for="radio">Never</label>
                     </div>
+
                     <div class="radio">
-                      <input type="radio" id="radio" data-doc="endsAfter" name="radioOption">
+                      <input type="radio" id="radio" name="ends-radio-button" value="occurrences">
                       <label for="radio">
                         After
-                        <input type="text" name="occurrences" class="" value="10">
+                        <input type="number" name="occurrences" class="occurrences-number-input" value="10">
                         occurrences
                       </label>
                     </div>
+
                     <div class="radio">
-                      <input type="radio" id="radio" name="radioOption" data-doc="endsOn">
+                      <input type="radio" id="radio" name="ends-radio-button" value="on-date">
                       <label for="radio">
-                        On <input type="text" name="endsOn" class="dateSelect" value="{{endsOn}}">
+                        On <input type="text" name="endsOn" class="date-select" value="{{endsOn}}">
                       </label>
                     </div>
+
                   </div>
                 </div>
               {{else}}
@@ -196,7 +198,7 @@
                   <label class="col-sm-2 control-label">Portions</label>
 
                   <div class="col-sm-10">
-                    <input type="text" name="portions" class="form-control" placeholder="No. of Portions">
+                    <input type="text" class="form-control portions" placeholder="No. of Portions">
                   </div>
                 </div>
 
@@ -206,7 +208,7 @@
 
                   <div class="col-sm-10">
                     <div class="input-group m-b">
-                      <input type="text" name="shelfLife" class="form-control" placeholder="Shelf Life">
+                      <input type="text" class="form-control shelf-life" placeholder="Shelf Life">
                       <span class="input-group-addon">Days</span>
                     </div>
                   </div>
@@ -221,7 +223,7 @@
 
                 <div class="col-sm-10">
                   <div class="input-group m-b">
-                    <input type="number" name="activeTime" class="form-control" placeholder="Active Time">
+                    <input type="number" class="form-control active-time" placeholder="Active Time">
                     <span class="input-group-addon">mins</span>
                   </div>
                 </div>
@@ -234,7 +236,7 @@
                 <div class="col-sm-10">
                   <div class="input-group m-b">
                     <span class="input-group-addon">$</span>
-                    <input type="text" name="avgWagePerHour" class="form-control"
+                    <input type="text" class="form-control avg-wage-per-hour"
                            placeholder="Average Wage of a Worker per Hour">
                     <span class="input-group-addon">/ hour</span>
                   </div>
@@ -245,7 +247,7 @@
               <div class="row">
                 <div class="col-sm-4 col-sm-offset-2">
                   <a href="{{pathFor route='jobItemsMaster'}}" class="btn btn-white" type="button">Cancel</a>
-                  <button class="btn btn-primary" type="submit">Save changes</button>
+                  <button class="btn btn-primary submit-button" type="submit">Save changes</button>
                 </div>
               </div>
             </form>
